Upgrade dependencies and fix related Expect.true
Co-Authored-By: Stanislav Sulima <stanislav@sulima.kiev.ua>

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "phonedb:generate": "node scripts/generate.js && elm-format --yes src/PhoneNumber/Countries.elm"
   },
   "dependencies": {
-    "world-countries": "^2.1.0"
+    "world-countries": "^5.1.0"
   },
   "devDependencies": {
-    "elm": "^0.19.0-bugfix6",
-    "elm-format": "0.8.1",
-    "xml2js": "^0.4.19",
-    "elm-test": "^0.19.0-rev5"
+    "elm": "latest-0.19.1",
+    "elm-format": "^0.8.7",
+    "elm-test": "latest-0.19.1",
+    "xml2js": "^0.4.19"
   }
 }
